<resources>
    <string name="app_name">RomanceHof</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">여수낭만포차</string>
    <string name="menu_gallery">포장마차 소개</string>
    <string name="menu_slideshow">좌석 현황</string>
    <string name="menu_map">오시는 길</string>
    <string name="menu_board">문의사항</string>
    <string name="menu_tree">낭만트리</string>
</resources>